--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Camera1Activity" />
+        <activity
+            android:name=".Camera1Activity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
